# OrangeEngine

./: .clang-format  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Adapter/: CMakeLists.txt
Engine/Runtime/Adapter/Window/: Window.cpp
Engine/Runtime/Adapter/Window/SDL/: SDLWindow.cpp
Engine/Runtime/Base/: CMakeLists.txt
Engine/Runtime/Base/Common/: SchemeType.cpp  Uri.cpp
Engine/Runtime/Base/Interface/Common/: SchemeType.hpp  Timestamp.hpp  Uri.hpp
Engine/Runtime/Base/Interface/Math/: Size.hpp
Engine/Runtime/Base/Math/: CMakeLists.txt  Size.cpp  Size.hpp
Engine/Runtime/Entry/: CMakeLists.txt  Entry.cpp  main.cpp
Engine/Runtime/Foundation/: CMakeLists.txt
Engine/Runtime/Foundation/Application/: Application.cpp  Application.hpp  ApplicationTimestamp.hpp  ApplicationWindow.cpp  ApplicationWindow.hpp  ApplicationWindowManager.cpp  ApplicationWindowManager.hpp  CMakeLists.txt
Engine/Runtime/Foundation/Assets/: AssetsManager.cpp
Engine/Runtime/Foundation/Configuration/: Configuration.cpp
Engine/Runtime/Foundation/Configuration/Xml/: XmlConfiguration.cpp  XmlConfiguration.hpp
Engine/Runtime/Foundation/Interface/Application/: Application.hpp
Engine/Runtime/Foundation/Interface/Assets/: AssetsManager.hpp  Buffer.hpp
Engine/Runtime/Foundation/Interface/Configuration/: IConfiguration.hpp
Engine/Runtime/Foundation/Interface/Logger/: Logger.hpp
Engine/Runtime/Foundation/Interface/Render/: IPhysicalDevice.h  IRhi.h  RenderContext.h
Engine/Runtime/Foundation/Interface/Scene/: ILifeCycle.hpp  IScene.hpp
Engine/Runtime/Foundation/Interface/Window/: IWindow.hpp
Engine/Runtime/Foundation/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
Engine/Runtime/Foundation/Render/: IRhi.cpp  RenderContext.cpp
Engine/Runtime/Foundation/Render/Vulkan/: Rhi.cpp  Rhi.h  VkCall.cpp  VkCall.h
Engine/Runtime/Foundation/Scene/: Scene.cpp  Scene.hpp
Engine/Runtime/Foundation/Window/: CMakeLists.txt  IWindow.hpp  WindowManager.cpp  WindowManager.hpp
Engine/Runtime/Foundation/Window/SDL/: SDLWindow.hpp
Engine/Runtime/Platfrom/: CMakeLists.txt
Engine/Runtime/Platfrom/Interface/Window/: Window.hpp
Engine/Runtime/Platfrom/Window/: Window.cpp
Engine/Runtime/Platfrom/Window/SDL/: SDLWindow.cpp  SDLWindow.hpp
Engine/ThirtyParty/: CMakeLists.txt
modules/: CMakeLists.txt
modules/entry/: CMakeLists.txt  main.cpp
modules/window/: CMakeLists.txt
modules/window/include/: i_window.h
modules/window/src/: glfw_window.cpp  glfw_window.h  i_window.cpp
