include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Base/Math)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Entry)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Foundation/Application)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Foundation/Window)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Foundation/Logger)